@@ -28,8 +28,10 @@ SIGNATURE
 t/Map-Tube-Prague/01-use.t
 t/Map-Tube-Prague/02-version.t
 t/Map-Tube-Prague/03-map.t
-t/Map-Tube-Prague/04-get_shortest_route.t
-t/Map-Tube-Prague/05-name.t
-t/Map-Tube-Prague/06-xml.t
+t/Map-Tube-Prague/04-get_node_by_id.t
+t/Map-Tube-Prague/05-get_node_by_name.t
+t/Map-Tube-Prague/06-get_shortest_route.t
+t/Map-Tube-Prague/07-name.t
+t/Map-Tube-Prague/08-xml.t
 xt/Map-Tube-Prague/01-pod_coverage.t
 xt/Map-Tube-Prague/02-pod.t
