@@ -1,4 +1,5 @@
 0.13
+ - Add tests for get_node_by_id() and get_node_by_name() methods.
  - Update dependency to Map::Tube to 3.01.
 
 0.12 2015-09-27T18:50:03+02:00
